--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node bin/www",
-    "dev": "nodemon bin/www -q"
+    "dev": "nodemon bin/www -q",
+    "generate:secret": "node script/secretKeygen.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "fastest-validator": "^0.6.19",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
