--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node bin/www",
     "dev": "nodemon bin/www -q",
-    "generate:secret": "node script/secretKeygen.js"
+    "generate:secret": "node script/secretKeygen.js",
+    "generate:controller": "node script/generator/controller.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "nodemon": "^2.0.1"
   }
 }
