--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "generate:controller": "bash bin/generator.sh"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name":"Fikri Rahmat Nurhidayat",
+    "email":"fikrirnurhidayat@gmail.com",
+    "url":"https://www.instagram.com/fikrirnurhidayat"
+  },
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
